<resources>
    <string name="app_name">Android Calculator</string>
    <string name="action_settings">Opcje</string>
    <string name="btnClearText">C</string>
    <string name="btnSqrtText">√</string>
    <string name="btnLogText">log</string>
    <string name="btnPowerText">^</string>
    <string name="btnDivisionText">/</string>
    <string name="btnMultiplyText">*</string>
    <string name="btnSubstractText">-</string>
    <string name="btnOneText">1</string>
    <string name="btnTwoText">2</string>
    <string name="btnThreeText">3</string>
    <string name="btnAddText">+</string>
    <string name="btnFourText">4</string>
    <string name="btnFiveText">5</string>
    <string name="btnSixText">6</string>
    <string name="btnSevenText">7</string>
    <string name="btnEightText">8</string>
    <string name="btnNineText">9</string>
    <string name="btnPrevText"><![CDATA[<-]]></string>
    <string name="btnParenthesisOpen">(</string>
    <string name="btnParenthesisClose">)</string>
    <string name="btnZeroText">0</string>
    <string name="btnCommaText">.</string>
    <string name="btnSignText">+/-</string>
    <string name="btnEqualsText">=</string>
    <string name="aboutText">Kalkulator zrealizowany w ramach zajęć \"Systemy operacyjne na platformach mobilnych\".\n\n Autor: Kamil Stadryniak</string>
    <string name="btnAdvancedText">Zaawansowany</string>
    <string name="btnBasicText">Podstawowy</string>
    <string name="btnAboutText">O aplikacji</string>
    <string name="btnExitText">Wyjście</string>
</resources>
