<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.kamil.androidcalculator.MainActivity"
    android:background="#000000">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewDisplayer"
            android:layout_row="0"
            android:layout_column="0"
            android:textStyle="normal"
            android:theme="@style/Base.Theme.AppCompat.Light"
            android:textAlignment="viewEnd"
            android:textSize="35sp"
            android:gravity="end"
            android:scrollbars="vertical"
            android:layout_gravity="top|left|bottom|right"
            android:background="#ffffff" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|bottom">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnClearText"
                android:id="@+id/btnClear"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="clearDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSignText"
                android:id="@+id/btnSign"
                android:layout_row="0"
                android:layout_column="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnPrevText"
                android:id="@+id/btnPrev"
                android:layout_row="0"
                android:layout_column="2"
                android:onClick="deletePreviousSymbol" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnParenthesisOpen"
                android:id="@+id/btnParenthesisOpen"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnParenthesisClose"
                android:id="@+id/btnParenthesisClose"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAddText"
                android:id="@+id/btnAdd"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMultiplyText"
                android:id="@+id/btnMultiply"
                android:layout_row="2"
                android:layout_column="0"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDivisionText"
                android:id="@+id/btnDivision"
                android:layout_row="2"
                android:layout_column="1"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSubstractText"
                android:id="@+id/btnSubstract"
                android:layout_row="2"
                android:layout_column="2"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOneText"
                android:id="@+id/btnOne"
                android:layout_row="3"
                android:layout_column="0"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnTwoText"
                android:id="@+id/btnTwo"
                android:layout_row="3"
                android:layout_column="1"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnThreeText"
                android:id="@+id/btnThree"
                android:layout_row="3"
                android:layout_column="2"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFourText"
                android:id="@+id/btnFour"
                android:layout_row="4"
                android:layout_column="0"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFiveText"
                android:id="@+id/btnFive"
                android:layout_row="4"
                android:layout_column="1"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSixText"
                android:id="@+id/btnSix"
                android:layout_row="4"
                android:layout_column="2"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSevenText"
                android:id="@+id/btnSeven"
                android:layout_row="5"
                android:layout_column="0"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEightText"
                android:id="@+id/btnEight"
                android:layout_row="5"
                android:layout_column="1"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNineText"
                android:id="@+id/btnNine"
                android:layout_row="5"
                android:layout_column="2"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnZeroText"
                android:id="@+id/btnZero"
                android:layout_row="6"
                android:layout_column="0"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCommaText"
                android:id="@+id/btnComma"
                android:layout_row="6"
                android:layout_column="1"
                android:onClick="writeSymbolToDisplayer" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEqualsText"
                android:id="@+id/Equals"
                android:layout_row="6"
                android:layout_column="2"
                android:onClick="solveEquation" />

        </GridLayout>

    </GridLayout>
</RelativeLayout>
